Changed text alignment and fixed more info links

--- a/css/style.css
+++ b/css/style.css
@@ -148,23 +148,20 @@ section {
 
 section h2.section-heading {
   font-size: 30px;
-  margin-top: 0;
-  margin-bottom: 15px;
-  letter-spacing: 1px;
+  margin-bottom: 1em;
 }
 
 @media (min-width: 576px) {
   section h2.section-heading {
-    font-size: 40px;
-    letter-spacing: 3.5px;
   }
 }
 
 section h3.section-subheading {
-  font-size: 18px;
+  font-size: 14px;
   font-weight: 400;
-  margin-bottom: 50px;
+  margin-bottom: 1.5em;
   color: #5f5aff;
+  text-transform: uppercase;
   }
 
 .btn {
@@ -259,7 +256,6 @@ img::-moz-selection {
   font-size: 90%;
   font-weight: 400;
   padding: 0.75em 0;
-  letter-spacing: 1px;
   color: white;
 }
 
@@ -338,8 +334,8 @@ header.masthead .intro-text .intro-heading {
   font-size: 35px;
   font-weight: medium;
   line-height: 50px;
-  letter-spacing: 1px;
   font-family: var(--ff-heading);
+  letter-spacing: 4px;
 }
 
 @media (min-width: 576px) {
@@ -348,7 +344,6 @@ header.masthead .intro-text .intro-heading {
   }
   header.masthead .intro-text .intro-heading {
     font-size: 50px;
-    letter-spacing: 4px;
   }
 }
 
